project/styles/membership.css
* {
    --primary-color: #000;
    --secondary-color: #959595;
    --accent-color: #0065C5;
    --text-color: #fff;
    --paragraph-size: 1.3rem;
    font-family: Arial, Helvetica, sans-serif;

    

}

.hero {
    position: relative;
    z-index: 1;
    height: 30rem;
}

.hero::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), rgb(0, 0, 0));
}

.hero img {
    /* position: absolute; */
    object-fit: cover;
    object-position: center;
    width: 100%;
    height: 100%;
}

.hero-text {
    position: absolute;
    width: 20rem;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /*Move the container 50% of itself to the left and to the top*/
    text-align: center;

    color: var(--text-color);

    /* Animation to appear when page loads */
    animation: toappear .75s ease-out 1 forwards;
}

.hero-text p,
#call-to-action {
    font-size: var(--paragraph-size);

}


@keyframes toappear {
    from {
        opacity: 0;
        margin-top: 5rem;
    }

    to {
        opacity: 100%;
        margin-top: 0;
    }

}

#call-to-action {
    height: 4rem;

    border: 1px solid #fff;
    margin: 1rem 0;
    background-color: rgba(0, 0, 0, .5);

    /* Positioning */
    display: flex;
    align-items: center;
    justify-content: center;
}

[data-title] {
    color: rgb(109, 192, 79);
}

[data-membership-title] {
    color: rgb(165, 129, 227);
}

#call-to-action:active {
    background-color: rgba(0, 0, 0, .8);
}

#call-to-action a:visited,
#call-to-action a {

    color: var(--text-color);
    text-decoration: none;

}

/* Membership cards */


.membership-cards {
    margin: 1rem 0;
}

.membership-introduction {
    text-align: center;
    padding: 1rem;
    font-size: var(--paragraph-size);
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.membership-introduction strong:first-child {
    color: red;
}

.cards-container {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.cards-container ul {
    list-style: none;
}

.cards-container ul li {
    padding-left: 1rem;
}

.card {
    border: 2px solid var(--primary-color);
    border-radius: 1rem;
    margin: 0 1rem;
    padding: 1rem 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    position: relative;
    /* font-size: var(--paragraph-size); */
}

.card-header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.card svg{
   width: 40px;
   height: 40px;
}


.card-content > ul {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    
    max-height: 0;
    overflow: hidden;
    transition: max-height .5s ease-out;
}

.card-content ul.visible {
    max-height: 50rem;
}

/* .card-content{
    max-height: 0;
    overflow: hidden;
    transition: max-height .5s ease-out; 
} */

/* .card-content.visible{
    max-height: 50rem
} */

.card>strong {
    text-align: center;
}

.card h3 {
    text-align: start;
}

.card .recommended,
.popular {
    border-radius: .5rem;
    padding: .5rem;
    font-size: 1rem;
    color: gold;
    background-color: var(--primary-color);
    text-align: center;
}

.popular {
    color: rgb(247, 129, 247);
}

li p em {
    text-decoration: line-through;
}

.price {
    font-size: 5rem;
    font-weight: 500;
}

.bring-friend {
    font-weight: 600;
    color: purple;
}

.get-plan-btn {

    background-color: var(--primary-color);
    color: var(--text-color);
    border-radius: .5rem;
    height: 3rem;
    font-size: var(--paragraph-size);
    text-decoration: none;
    text-align: center;
    line-height: 3rem;
}


/* form */

.required-info{
    margin-left: 2rem;
}

.form-container h2, .form-container p{
    text-align: center;
    padding: 1rem;
}

.form-container h2{
    font-size: 1.95rem;
}

.form-intro p{
    font-size: var(--paragraph-size);
}

form {
    display: flex;
    flex-direction: column;
    margin: 1em 0;
}

fieldset{
    display: flex;
    flex-direction: column;
    gap: .7em;
    /* background-color: aquamarine; */
    border: 1px solid var(--accent-color);
    margin: .5em 1em ;
    padding: 1em;
    border: none;
}

legend{
    font-weight: 700;
    font-size: large;
}

label{
    display: flex;
    flex-direction: column;
}

input[type='text'],
input[type='email'],
input[type='tel']{
    height: 3em ;
    padding: .5em;
    border: 2px solid var(--primary-color);
}

input[type='text'],
input[type='email'],
input[type='tel'],
textarea{
    border-radius: .2em;
    font-size: 1.2em;
}


textarea{
    height: 10em;
    border: 2px solid var(--accent-color);
    padding: .5em;
    font-size: 1em;
    resize: none;
}

label.radio-op{
    flex-direction: row;
    gap: 1em;
}

label.radio-op strong{
    margin: 0;
}

input[type='submit']{
    width: 80%;
    height: 3em;
    margin: 0 auto;
    border: none;
    /* box-shadow: 0px 0px 10px 2px var(--accent-color); */
    background-color: var(--primary-color);
    border-radius: .5rem;
    font-size: var(--paragraph-size);
    color: #fff;
}

#pcode::placeholder{
    font-size: .9rem;
}

.membership-cards{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1.5em;
    margin: 2em 0;
}

.membership-cards h2{
    text-align: center;
}

.final-information, .tyc{
    margin: 1.5rem;
    text-align: justify;
}

/* Modal - Dialog */

dialog{
    width: 90%;
    margin: 0 auto;
    padding: 3em;
    border: 1px solid var(--accent-color);
    border-radius: .2em;
    box-shadow: 5px 5px 12px 0 black;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    gap: 2em;
    text-align: justify;
}

dialog h3{
    margin: 1em ;
}

dialog button{

    position: absolute;
    top: 1em;
    right: 1em;
    width: 4em;
    justify-self: flex-end;
    padding: .5rem 1rem;
    border: none;
    background-color: transparent;
}

dialog .close-button:hover{
    cursor: pointer;
}

::backdrop{
    background-color: rgba(0, 0, 0,0.5);
}

dialog ul{
    display: flex;
    flex-direction: column;
    margin: 2em 0;
    background-color: transparent;
    gap: .5em;
}

dialog li{
    background-color: transparent;
    list-style-type: circle;
    text-align: justify;
}

